
DROP TABLE IF EXISTS inventory         CASCADE;
DROP TABLE IF EXISTS returns           CASCADE;
DROP TABLE IF EXISTS payments          CASCADE;
DROP TABLE IF EXISTS shippings         CASCADE;
DROP TABLE IF EXISTS order_items       CASCADE;
DROP TABLE IF EXISTS orders            CASCADE;
DROP TABLE IF EXISTS products          CASCADE;
DROP TABLE IF EXISTS sellers           CASCADE;
DROP TABLE IF EXISTS customers         CASCADE;
DROP TABLE IF EXISTS category          CASCADE;


-- TABLE 1: category

CREATE TABLE category (
    category_id     INT PRIMARY KEY,
    category_name   VARCHAR(20) NOT NULL
);


-- TABLE 2: customers

CREATE TABLE customers (
    customer_id     INT PRIMARY KEY,
    first_name      VARCHAR(20) NOT NULL,
    last_name       VARCHAR(20) NOT NULL,
    state           VARCHAR(20),
    address         VARCHAR(5) DEFAULT 'xxxx'
);


-- TABLE 3: sellers

CREATE TABLE sellers (
    seller_id       INT PRIMARY KEY,
    seller_name     VARCHAR(25) NOT NULL,
    origin          VARCHAR(15)
);


-- TABLE 4: products
CREATE TABLE products (
    product_id      INT PRIMARY KEY,
    product_name    VARCHAR(50) NOT NULL,
    price           FLOAT       NOT NULL CHECK (price >= 0),
    cogs            FLOAT       NOT NULL CHECK (cogs >= 0),
    category_id     INT,
    CONSTRAINT fk_product_category
        FOREIGN KEY (category_id)
        REFERENCES category (category_id)
);


-- TABLE 5: orders
CREATE TABLE orders (
    order_id        INT PRIMARY KEY,
    order_date      DATE        NOT NULL,
    customer_id     INT         NOT NULL,
    seller_id       INT         NOT NULL,
    order_status    VARCHAR(15) DEFAULT 'Pending',
    CONSTRAINT fk_orders_customer
        FOREIGN KEY (customer_id)
        REFERENCES customers (customer_id),
    CONSTRAINT fk_orders_seller
        FOREIGN KEY (seller_id)
        REFERENCES sellers (seller_id)
);

-- TABLE 6: order_items
CREATE TABLE order_items (
    order_item_id   INT PRIMARY KEY,
    order_id        INT         NOT NULL,
    product_id      INT         NOT NULL,
    quantity        INT         NOT NULL CHECK (quantity > 0),
    price_per_unit  FLOAT       NOT NULL CHECK (price_per_unit >= 0),
    CONSTRAINT fk_oi_order
        FOREIGN KEY (order_id)
        REFERENCES orders (order_id),
    CONSTRAINT fk_oi_product
        FOREIGN KEY (product_id)
        REFERENCES products (product_id)
);


-- TABLE 7: payments
CREATE TABLE payments (
    payment_id          INT PRIMARY KEY,
    order_id            INT         NOT NULL,
    payment_date        DATE,
    payment_status      VARCHAR(20) DEFAULT 'Pending',
    CONSTRAINT fk_payments_order
        FOREIGN KEY (order_id)
        REFERENCES orders (order_id)
);


-- TABLE 8: shippings

CREATE TABLE shippings (
    shipping_id         INT PRIMARY KEY,
    order_id            INT         NOT NULL,
    shipping_date       DATE,
    return_date         DATE,
    shipping_providers  VARCHAR(15),
    delivery_status     VARCHAR(15) DEFAULT 'Pending',
    CONSTRAINT fk_shippings_order
        FOREIGN KEY (order_id)
        REFERENCES orders (order_id)
);


-- TABLE 9: inventory

CREATE TABLE inventory (
    inventory_id    INT PRIMARY KEY,
    product_id      INT         NOT NULL,
    stock           INT         NOT NULL DEFAULT 0 CHECK (stock >= 0),
    warehouse_id    INT,
    last_stock_date DATE,
    CONSTRAINT fk_inventory_product
        FOREIGN KEY (product_id)
        REFERENCES products (product_id)
);

SELECT 'category'    AS tbl, COUNT(*) FROM category
UNION ALL SELECT 'customers',  COUNT(*) FROM customers
UNION ALL SELECT 'sellers',    COUNT(*) FROM sellers
UNION ALL SELECT 'products',   COUNT(*) FROM products
UNION ALL SELECT 'orders',     COUNT(*) FROM orders
UNION ALL SELECT 'order_items',COUNT(*) FROM order_items
UNION ALL SELECT 'payments',   COUNT(*) FROM payments
UNION ALL SELECT 'shippings',  COUNT(*) FROM shippings
UNION ALL SELECT 'inventory',  COUNT(*) FROM inventory;


-- ---------------------------
-- 10 Advanced Business Problems
-- ---------------------------

select * from category;
select * from customers;
select * from inventory;
select * from order_items;
select * from orders;
select * from payments;
select * from products;
select * from sellers;
select * from sellers;

/*
1. Top Selling Products
Query the top 10 products by total sales value.
Challenge: Include product name, total quantity sold, and total sales value.
*/
SELECT 
    p.product_name,
    SUM(o.quantity)  AS quantity_sold,
    SUM(o.quantity * o.price_per_unit) AS total_sales
FROM products p
JOIN order_items o
    ON p.product_id = o.product_id
GROUP BY 1
ORDER BY 3 DESC
LIMIT 10;


/*
2. Revenue by Category
Calculate total revenue generated by each product category.
Challenge: Include the percentage contribution of each category to total revenue.
*/
SELECT 
    c.category_name,
    round (SUM(o.quantity * o.price_per_unit)::Numeric , 2)   AS total_revenue,
    ROUND(
        (SUM(o.quantity * o.price_per_unit) * 100.0 /
        (SELECT SUM(quantity * price_per_unit) FROM order_items))::NUMERIC , 2)   AS revenue_pct
FROM category c
JOIN products p
    ON c.category_id = p.category_id
JOIN order_items o
    ON p.product_id = o.product_id
GROUP BY 1
ORDER BY 2 DESC;


/*
3. Average Order Value (AOV)
Compute the average order value for each customer.
Challenge: Include only customers with more than 5 orders.
*/
with lt as 
(
	
	select 
		O.customer_id,
		c.first_name,
		round (avg(oi.quantity * oi.price_per_unit)::Numeric , 2) as aov
	from customers C
		 join orders O
			on C.customer_id = O.customer_id
		join order_items oi
			on O.order_id = oi.order_id
	where o.customer_id in 
		( 
			select 
				customer_id
			from orders 
			group by 1
			having count(*) > 5
		)
	group by 1,2
	order by 3 desc
	
) select * from lt;

/*
4. Monthly Sales Trend
Query monthly total sales over the past year.
Challenge: Display the sales trend, grouping by month, return current_month sale, last month sale!
*/
with monthly_sales as
(
	select 
		extract (year from order_date ) as year,
		extract (month from order_date ) as month,
		round (SUM(oi.quantity * oi.price_per_unit)::Numeric , 2)   AS current_month
	from orders as o
		join order_items as oi
			on o.order_id = oi.order_id
	group by 1, 2
	order by 1, 2 
) 
select 
	year,
	month,
	current_month,
	lag(current_month, 1) over (order by year, month) as last_month,
	ROUND(
        current_month - LAG(current_month, 1) OVER (ORDER BY year, month)
    , 2) AS mon_change 
	from monthly_sales;
	
/*
5. Customers with No Purchases
Find customers who have registered but never placed an order.
Challenge: List customer details and the time since their registration.
*/

select 
	*
from customers 
where customer_id not in 
( 
	select distinct customer_id
	from orders
)
order by customer_id;

/*
6. Least-Selling Categories by State
Identify the least-selling product category for each state.
Challenge: Include the total sales for that category within each state.
*/

WITH cte AS (
    SELECT 
        cu.state,
        c.category_name,
        round (SUM(oi.quantity * oi.price_per_unit)::numeric , 2)  AS total_sales,
        RANK() OVER (
            PARTITION BY cu.state 
            ORDER BY SUM(oi.quantity * oi.price_per_unit) ASC
        )  AS rnk
    FROM category c
    JOIN products p
        ON c.category_id = p.category_id
    JOIN order_items oi
        ON p.product_id = oi.product_id
    JOIN orders o
        ON oi.order_id = o.order_id
    JOIN customers cu
        ON o.customer_id = cu.customer_id
    GROUP BY 1, 2
)
SELECT 
    state,
    category_name,
    ROUND(total_sales::NUMERIC, 2) AS total_sales
FROM cte
WHERE rnk = 1
ORDER BY state;

select * from category;
select * from order_items where quantity > 1;
select * from customers;

/*
7. Customer Lifetime Value (CLTV)
Calculate the total value of orders placed by each customer over their lifetime.
Challenge: Rank customers based on their CLTV.
*/
with cltv as
(
	select 
		c.customer_id,
		concat (c.first_name, ' ', c.last_name) as full_name,
		round(SUM(oi.quantity * oi.price_per_unit)::numeric, 2) as ltv
	from  customers c
		join orders o
	        ON c.customer_id = o.customer_id
		 JOIN order_items oi
	        ON o.order_id = oi.order_id
	group by 1,2
)  
select 
	customer_id,
	full_name,
	ltv,
	dense_rank() over (order by ltv) as rnk
from cltv
order by rnk desc;
    
       
/*
8. Inventory Stock Alerts
Query products with stock levels below a certain threshold (e.g., less than 10 units).
Challenge: Include last restock date and warehouse information.
*/

with stk as 
(
	select 
		p.product_name,
		p.price,
		i.last_stock_date,
		case 
			when stock  < 31 then 'Low Stocks'
			when stock  < 55 then 'Medium Stocks'
			else 'High Stocks'
		end as stk_alert
	from inventory i
		join products p
			on i.product_id = p.product_id
)
select 
	product_name,
	price,
	last_stock_date,
	stk_alert
from stk
where stk_alert = 'Low Stocks';

/*
9. Shipping Delays 
Identify orders where the shipping date is later 7 days after the order date
Challenge: Inclide customer, order details, and delivery provider.
*/

select *
from shippings S
	join orders o
		on s.order_id = o.order_id
where s.shipping_date - o.order_date = 1;

/*
10. Payment Success Rate 
Calculate the percentage of successful payments across all orders.
Challenge: Include breakdowns by payment status (e.g., failed, pending).
*/

SELECT 
    payment_status,
    COUNT(*)  AS total_count,
    ROUND((COUNT(*) * 100.0 / (SELECT COUNT(*) FROM payments))::NUMERIC, 2)    AS percentage
FROM payments
GROUP BY 1
ORDER BY 2 DESC;

/*
11. Most Returned Products
Query the top 10 products by the number of returns.
Challenge: Display the return rate as a percentage of total units sold for each product.
*/

WITH returns AS (
    SELECT 
        p.product_id,
        p.product_name,
        COUNT(*) AS total_returns,
        SUM(oi.quantity) AS total_sold,
        ROUND((COUNT(*) * 100.0 / SUM(oi.quantity))::NUMERIC, 2) AS return_rate
    FROM shippings s
    JOIN orders o
        ON s.order_id = o.order_id
    JOIN order_items oi
        ON o.order_id = oi.order_id
    JOIN products p
        ON oi.product_id = p.product_id
    WHERE TRIM(s.delivery_status) = 'Returned'
    GROUP BY 1, 2
)
SELECT 
    product_id,
    product_name,
    total_returns,
    total_sold,
    return_rate,
    DENSE_RANK() OVER (ORDER BY total_returns DESC) AS rnk
FROM returns
ORDER BY rnk
LIMIT 10;

select distinct delivery_status
from shippings;

/*
11. Top Performing Sellers
Find the top 5 sellers based on total sales value.
Challenge: Include both successful and failed orders, and display their percentage of successful orders.
*/

WITH tps AS (
    SELECT 
        s.seller_id,
        s.seller_name,
        COUNT(DISTINCT o.order_id) AS total_orders,
        COUNT(DISTINCT CASE WHEN o.order_status = 'Completed' THEN o.order_id END)                          AS successful_orders,
        ROUND(SUM(oi.quantity * oi.price_per_unit)::NUMERIC, 2) AS total_sales
    FROM sellers s
    JOIN orders o
        ON s.seller_id = o.seller_id
    JOIN order_items oi
        ON oi.order_id = o.order_id
    GROUP BY 1, 2
)
SELECT 
    seller_name,
    total_orders,
    successful_orders,
    total_sales,
    ROUND((successful_orders * 100.0 / total_orders)::NUMERIC, 2)                                                                   AS success_pct,
    DENSE_RANK() OVER (ORDER BY total_sales DESC) AS rnk
FROM tps
ORDER BY rnk
LIMIT 5;
	
/*
12. Product Profit Margin
Calculate the profit margin for each product (difference between price and cost of goods sold).
*/

 
/*
13. Most Returned Products
Query the top 10 products by the number of returns.
Challenge: Display the return rate as a percentage of total units sold for each product.
*/

/*
14. Inactive Sellers
Identify sellers who haven’t made any sales in the last 15 months.
Challenge: Show the last sale date and total sales from those sellers.
*/

/*
15. IDENTITY customers into returning or new
if the customer has done more than 5 return categorize them as returning otherwise new
Challenge: List customers id, name, total orders, total returns
*/

/*
16. Top 5 Customers by Orders in Each State
Identify the top 5 customers with the highest number of orders for each state.
Challenge: Include the number of orders and total sales for each customer.
*/

/*
17. Revenue by Shipping Provider
Calculate the total revenue handled by each shipping provider.
Challenge: Include the total number of orders handled and the average delivery time for each provider.
*/

/*
18. Top 10 product with highest decreasing revenue ratio compare to year 2022 and year 2023
Challenge: Return product_id, product_name, category_name, 2022 revenue and 2023 revenue decrease ratio at end Round the result
Note: Decrease ratio = y23-y22/y22* 100
*/

