DROP TABLE IF EXISTS cities CASCADE;

CREATE TABLE cities (
    id INT PRIMARY KEY,
    city VARCHAR(50)
);

CREATE TABLE restaurant_type (
    id INT PRIMARY KEY,
    restaurant_type VARCHAR(20)
);

CREATE TABLE serve_type (
    id INT PRIMARY KEY,
    serve_type VARCHAR(20)
);

CREATE TABLE meal_types (
    id INT PRIMARY KEY,
    meal_type VARCHAR(20)
);

CREATE TABLE restaurant (
    id INT PRIMARY KEY,
    restaurant_name VARCHAR(50),
    restaurant_type_id INT REFERENCES restaurant_type(id),
    income_percentage NUMERIC(5,2),
    city_id INT REFERENCES cities(id)
);

CREATE TABLE meals (
    id INT PRIMARY KEY,
    restaurant_id INT REFERENCES restaurant(id),
    serve_type_id INT REFERENCES serve_type(id),
    meal_type_id INT REFERENCES meal_types(id),
    hot_cold VARCHAR(10) CHECK (hot_cold IN ('Hot', 'Cold')),
    meal_name VARCHAR(50),
    price NUMERIC(10,2)
);

CREATE TABLE members (
    id INT PRIMARY KEY,
    first_name VARCHAR(50),
    surname VARCHAR(50),
    sex CHAR(1) CHECK (sex IN ('M','F')),
    email VARCHAR(50),
    city_id INT REFERENCES cities(id),
    monthly_budget NUMERIC(10,2)
);

CREATE TABLE orders (
    id INT PRIMARY KEY,
    order_timestamp TIMESTAMP,
    member_id INT REFERENCES members(id),
    restaurant_id INT REFERENCES restaurant(id),
    total_order NUMERIC(10,2)
);

CREATE TABLE order_details (
    id INT PRIMARY KEY,
    order_id INT REFERENCES orders(id),
    meal_id INT REFERENCES meals(id)
);

CREATE TABLE monthly_members (
    member_id INT PRIMARY KEY,
    first_name VARCHAR(50),
    surname VARCHAR(50),
    sex CHAR(1) CHECK (sex IN ('M', 'F')),
    email VARCHAR(50),
    city VARCHAR(50),
    year INT,
    month INT,
    order_count INT,
    meals_count INT,
    monthly_budget NUMERIC(10,2),
    total_expense NUMERIC(10,2),
    balance NUMERIC(10,2),
    commission NUMERIC(10,2)
);

/* 
	You can insert the data directly from PGsql or use this
	COPY orders (id, order_timestamp, member_id, restaurant_id, total_order) 
	FROM 'C:/projects/SQL/DATASETS/Zomato project --- P3/zomato/serve_type.csv' 
	DELIMITER ',' 
	CSV HEADER;
*/

-- Confirming if the tables are populated
select * from cities;
select * from meal_types;
select * from meals;
select * from members;
select * from monthly_members;
Select * from order_details;
select * from orders ;
select * from restaurant ;
select * from restaurant_type;
select * from serve_type;

/*
	Level 1 — Beginner: Data Retrieval & Filtering
	1.	Retrieve all members and their cities.
	2.	List all restaurants in a specific city.
	3.	Find all orders placed in the last 30 days.
	4.	Show orders where the total order amount is greater than a specific value.
	5.	Display members sorted by surname.
	6.	Display the top 10 most recent orders.
	7.	Find all restaurants of a specific restaurant type.
	8.	Count the total number of members in the database.
	Skills: SELECT  •  WHERE  •  ORDER BY  •  LIMIT  •  COUNT()
*/

-- Retrieve all members and their cities.

select first_name,surname, sex,
	(select city from cities where id = members.city_id) as city 
from members;
-- or 
Select 
	M.first_name,
	M.surname,
	M.sex,
	C.city
from members M
join cities C
	on M.id = C.id; 

-- List all restaurants in a specific city.
select 
	restaurant_name,
	(select city from cities where id = restaurant.city_id) as restaurant_city 
from restaurant
where (select city from cities where id = restaurant.city_id) ='Herzelia';

-- Find all orders placed in the last 30 days.
SELECT * 
FROM orders
WHERE order_timestamp >= '2020-01-01'
AND order_timestamp < '2020-02-01';

-- Show orders where the total order amount is greater than a specific value.
select * 
from orders
Where total_order >= 50;

-- Display members sorted by surname.
select *
from members
order by surname;

-- Display the top 10 most recent orders.
select * 
from orders
order by order_timestamp Desc
limit 10;

-- Find all restaurants of a specific restaurant type.
select * 
from restaurant R
	join restaurant_type T
	on r.restaurant_type_id = T.id
where T.restaurant_type = 'Asian';

-- Count the total number of members in the database.
select 
	count(*)
from members;

/*
	Level 2 — Aggregations & Grouping
	1.	Find the total number of orders placed by each member.
	2.	Calculate the total revenue generated by each restaurant.
	3.	Find the average order value per member.
	4.	Identify the top 5 restaurants with the highest number of orders.
	5.	Count how many orders were placed each day.
	6.	Find the average monthly budget per city.
	Skills: GROUP BY  •  SUM()  •  AVG()  •  COUNT()  •  HAVING
*/

-- Find the total number of orders placed by each member.
select 
	M.first_name,
	M.surname,
	count(*) AS total_orders
from members M
join orders O
	on M.id = O.member_id
group by M.first_name, M.surname, M.id;

-- Calculate the total revenue generated by each restaurant.
select 
	R.id,
	R.restaurant_name,
	sum(O.total_order) AS total_revenue
from restaurant AS R
	join orders AS O
	on R.id = O.restaurant_id
group by R.id;

-- Find the average order value per member.
select 
	M.first_name,
	M.surname,
	round(avg(O.total_order), 2) as avg_order_value
from members as M
	join orders O
	on M.id = O.member_id
group by M.first_name, M.surname,M.id;

-- Identify the top 5 restaurants with the highest number of orders.
select 
	R.restaurant_name,
	count(*) as total_orders
from restaurant R
	join orders O
	on R.id = O.restaurant_id
group by R.restaurant_name
order by total_orders desc
limit 5;

-- Count how many orders were placed each day.
select 
	 extract (day from order_timestamp) as order_day,
	 count(*) as toal_orders
from orders
group by 
	 order_day
order by 
	order_day;

-- Find the average monthly budget per city.
select 
	C.id,
	C.city,
	round(avg(M.monthly_budget),2) AS avg_budget
from members M
join cities C 
	on M.city_id = C.id
group by C.id, C.city
order by avg_budget;

/*
	Level 3 — Joining Tables
	1.	Show member name, restaurant name, and order amount for each order.
	2.	Find which member ordered from which restaurant.
	3.	List restaurants and the total number of members who ordered from them.
	4.	Show meal name, serve type, and meal type for all meals.
	5.	Retrieve all order details along with the meal name and price.
	Skills: INNER JOIN  •  LEFT JOIN  •  Multiple table joins
*/

-- Show member name, restaurant name, and order amount for each order.
SELECT 
    M.first_name,
    M.surname,
    R.restaurant_name,
    O.total_order
FROM members AS M
JOIN orders O ON M.id = O.member_id
JOIN restaurant R ON R.id = O.restaurant_id;

-- Find which member ordered from which restaurant.
SELECT 
    M.first_name,
    M.surname,
    R.restaurant_name
FROM members AS M
JOIN orders O ON M.id = O.member_id
JOIN restaurant R ON R.id = O.restaurant_id;

--List restaurants and the total number of members who ordered from them.
select 
	R.restaurant_name,
	  COUNT(DISTINCT M.id) AS total_members
from restaurant R
join orders O
	on r.id = O.restaurant_id
join members M
	on M.id = O.member_id
group by R.restaurant_name;

-- Show meal name, serve type, and meal type for all meals.
select 
	M.meal_name,
	S.serve_type,
	T.meal_type
from meals AS M
join meal_types AS T
	on M.meal_type_id = T.id
join serve_type AS S
	on M.serve_type_id = S.id;

-- Retrieve all order details along with the meal name and price.
select 
    O.id,
	O.order_id,
	O.meal_id,
	M.meal_name,
	M.price
from meals M
join order_details O
	 on M.id = O.meal_id;
	
/*
	Level 4 — Date & Time Analysis
	1.	Find the number of orders placed each month.
	2.	Identify the peak ordering minutes of the day using order_timestamp.
	3.	Find members who have not ordered in the last 60 days.
	4.	Show total revenue per month across all restaurants.
	Skills: DATE_TRUNC()  •  EXTRACT()  •  CURRENT_DATE  •  date arithmetic
*/

-- Find the number of orders placed each month.
select 
	extract (year from order_timestamp) as year,
	extract (month from order_timestamp) as Month,
	count(*) as total_orders
from orders
group by year,month
order by year,month;

-- Identify the peak ordering minutes of the day using order_timestamp.
select
	extract (Minute from order_timestamp) as minute,
	COUNT(*) AS total_orders
from orders
group by minute
order by total_orders  desc;

-- Find members who have not ordered in the last 60 days.
SELECT 
    M.id,
    M.first_name,
    M.surname
FROM members M
WHERE M.id NOT IN (
    SELECT DISTINCT member_id 
    FROM orders
    WHERE order_timestamp >= '2020-12-01'::date - INTERVAL '60 days'
);

-- Show total revenue per month across all restaurants.
SELECT 
    EXTRACT(MONTH FROM O.order_timestamp) AS month,
    SUM(O.total_order) AS total_revenue
FROM restaurant R
JOIN orders O ON R.id = O.restaurant_id
GROUP BY month
order by month;

/*
	Level 5 — Conditional Logic & Segmentation
	1.	Categorize orders into Small (< $20), Medium ($20-$50), Large (> $50) using CASE.
	2.	Segment members by total spend into High value (> $500), Medium, Low.
	3.	Classify meals as budget (< $20), standard ($20-$50), or premium (> $50) based on price.
	4.	Label restaurants by income_percentage as low, mid, or high commission.
	Skills: CASE WHEN
*/

-- Categorize orders into Small (< $20), Medium ($20-$50), Large (> $50) using CASE.
select *,
	case
		when total_order < 20 then 'small'
		when total_order between 21 and 50 then 'medium'
		else 'large'
	end as order_category
from orders;

-- 	Segment members by total spend into High value (> $500), Medium, Low.
select 
	M.first_name,
	M.surname,
	sum(O.total_order) as total_spend,
	case
		when sum(O.total_order) > 500 then 'High'
		when sum(O.total_order) between 500 and 200 then 'Medium'
		else 'Low'
	end as Member_segment
from orders O
join members M
	on O.member_id = M.id
group by M.first_name,M.surname;

-- Classify meals as budget (< $20), standard ($20-$50), or premium (> $50) based on price.
select 
	meal_name,
	price,
	case
		when price < 20 then 'Budget'
		when price between 20 and 50 then 'Standard'
		else 'Premium'
	end as meal_category
from meals;

-- Label restaurants by income_percentage as low, mid, or high commission.
select *,
	case 
		when income_percentage < 5 then 'Low'
		when income_percentage  < 10 then 'Mid'
		else 'High'
	end as commission
from restaurant;

/*
	Level 6 — Subqueries
	1.	Find members who spent more than the average member.
	2.	Find restaurants whose total revenue is above the overall average.
	3.	Retrieve the member who placed the highest value single order.
	4.	Find meals that have never been ordered.
	Skills: Subqueries  •  IN  •  EXISTS
*/

-- Find members who spent more than the average member.
select *
from members 
where id in 
	(  
	select member_id
	from orders 
	group by member_id
	having sum (total_order) > (
				select avg (total_spend)
				from (
						select sum (total_order) as total_spend
						from orders
						group by member_id
		)
	)
);

-- Find restaurants whose total revenue is above the overall average.
select *
from restaurant
where id in (
	select restaurant_id
	from orders
	group by restaurant_id
	having sum (total_order) >(
		select avg(total_spend)
		from (
			select sum(total_order) as total_spend
			from orders
			group by restaurant_id
			)as restaurant_totals
		)
	);

-- Retrieve the member who placed the highest value single order.
select *
from members
where id in (
		select member_id
		from orders
		order by total_order DESC
		limit 1
	);

-- Find meals that have never been ordered.
select *
from meals
where id not in (
		select meal_id
		from order_details
		);

/*
	Level 7 — Window Functions
	1.	Rank restaurants based on total revenue.
	2.	Find the top 3 restaurants in each city using ROW_NUMBER.
	3.	Show the previous order amount for each member using LAG.
	4.	Calculate the difference in total_order between consecutive orders for a member.
	5.	Identify the member with the highest spend per city.
	Skills: ROW_NUMBER()  •  RANK()  •  DENSE_RANK()  •  LAG()  •  LEAD()
*/

-- Rank restaurants based on total revenue.
select 
	restaurant_id ,
	sum(total_order) as total_spend,
	rank() over (order by sum(total_order) desc ) as total_rank
from orders
group by restaurant_id;

-- Find the top 3 restaurants in each city using ROW_NUMBER.
SELECT *
FROM (
    SELECT 
        R.restaurant_name,
        C.city,
        COUNT(O.id) AS total_orders,
        ROW_NUMBER() OVER (
            PARTITION BY R.city_id 
            ORDER BY COUNT(O.id) DESC
        ) AS rank
    FROM restaurant R
    JOIN orders O ON R.id = O.restaurant_id
    JOIN cities C ON R.city_id = C.id
    GROUP BY R.id, R.restaurant_name, R.city_id, C.city
) AS ranked
WHERE rank <= 3;

-- Show the previous order amount for each member using LAG.
SELECT 
    id,
    member_id,
    order_timestamp,
    total_order,
    LAG(total_order) OVER (
        PARTITION BY member_id 
        ORDER BY order_timestamp
    ) AS previous_order
FROM orders;

-- Calculate the difference in total_order between consecutive orders for a member.
SELECT 
    id as order_id, 
    member_id,
    order_timestamp,
    total_order,
    LAG(total_order) OVER (
        PARTITION BY member_id 
        ORDER BY order_timestamp
    ) AS previous_order,
    total_order - LAG(total_order) OVER (
        PARTITION BY member_id 
        ORDER BY order_timestamp
    ) AS difference
FROM orders;


-- Identify the member with the highest spend per city.
select *
from (
	select 
		M.id,
		M.first_name,
		M.surname,
		C.city,
		sum (total_order) as total_spend,
		row_number () over ( partition by C.id order by sum (total_order)  DESC ) as member_rank
	from members M
		join orders O
			on M.id = O.member_id
		join cities C
			on M.city_id = C.id
	group by M.id, M.first_name, M.surname, C.city, C.id
) as ranked
where member_rank = 1 ;

-- Using a cte 
with rank_per_city as (
	 select 
		M.id,
		M.first_name,
		M.surname,
		C.city,
		sum (total_order) as total_spend,
		row_number () over ( partition by C.id order by sum (total_order)  DESC ) as member_rank
	from members M
		join orders O
			on M.id = O.member_id
		join cities C
			on M.city_id = C.id
	group by M.id, M.first_name, M.surname, C.city, C.id
)
	select * from rank_per_city where member_rank = 1; 

/*
	Level 8 — Real Business Problems
	1.	Identify the top 10 most loyal members by order count.
	2.	Find restaurants with declining order trends over time.
	3.	Find the member with the highest total spend per month.
	4.	Calculate customer lifetime value (CLV) using total spend per member.
	5.	Detect members at risk of churn (no orders in the last 90 days).
	6.	Find which restaurant type generates the most revenue.
	Skills: CTEs  •  Window functions  •  Date arithmetic  •  Aggregations
*/

-- Identify the top 10 most loyal members by order count.

SELECT 
    M.id,
    M.first_name,
    M.surname,
    COUNT(O.id) AS total_orders
FROM members M
JOIN orders O ON M.id = O.member_id
GROUP BY M.id, M.first_name, M.surname
ORDER BY total_orders DESC
LIMIT 10;

-- Find restaurants with declining order trends over time.
select *
from (
		SELECT 
		    R.restaurant_name,
		    EXTRACT(MONTH FROM O.order_timestamp) AS month,
		    SUM(O.total_order) AS current_orders,
		    LEAD(SUM(O.total_order)) OVER (
		        PARTITION BY R.id 
		        ORDER BY EXTRACT(MONTH FROM O.order_timestamp)
		    ) AS next_month_orders
		FROM restaurant R
		JOIN orders O ON R.id = O.restaurant_id
		GROUP BY R.id, R.restaurant_name, EXTRACT(MONTH FROM O.order_timestamp)
	)as trends
where next_month_orders < current_orders;

-- Find the member with the highest total spend per month.
SELECT * FROM (
    SELECT 
        M.id AS member_id,
        M.first_name,
        M.surname,
        EXTRACT(MONTH FROM order_timestamp) AS month,
        SUM(O.total_order) AS total_spend,
        ROW_NUMBER() OVER (
            PARTITION BY EXTRACT(MONTH FROM order_timestamp) 
            ORDER BY SUM(O.total_order) DESC
        ) AS rnk
    FROM members M
    JOIN orders O ON M.id = O.member_id
    GROUP BY M.id, M.first_name, M.surname, EXTRACT(MONTH FROM order_timestamp)
) AS ranked
WHERE rnk = 1;

-- Calculate customer lifetime value (CLV) using total spend per member.
select 
	m.id as member_id,
	m.first_name,
	m.surname,
	sum(o.total_order) as lifetime_value
from members as  m
	join orders as o
		on m.id = o.member_id
group by m.id, m.first_name, m.surname
order by lifetime_value desc;

-- Detect members at risk of churn (no orders in the last 90 days).
select 
	m.id as member_id,
	m.first_name,
	m.surname
from members m
join orders o
on m.id = o.member_id
where m.id not in(
	select distinct member_id
	from orders
	where order_timestamp >= '2020-07-31'::date - INTERVAL '90 days' );

-- Find which restaurant type generates the most revenue.
select 
	rt.restaurant_type,
	sum(o.total_order) as total_revenue
from restaurant_type rt
	join restaurant r
		on rt.id = r.restaurant_type_id
	join orders o
		on r.id = o.restaurant_id
group by rt.restaurant_type
order by total_revenue DESc;


select * from orders;